--- a/html/main.html
+++ b/html/main.html
@@ -6,11 +6,13 @@
 	<h2>Hex Web</h2>
 	<div id="arena" style="border:1px solid black; overflow:auto; width:400px; height:300px; position:relative;"></div>
 	<div id="status"></div>
-	<textarea id="text" cols="80" rows="10" readonly></textarea><br><br>
+	<br/>
 	<form id="form">
 		<input id="input" size="80">
 		<input type="submit" value="->">
 	</form>
+	<br/>
+	<textarea id="text" cols="80" rows="10" readonly></textarea>
 </body>
 
 
